mobile alignment fix

--- a/CSS/casestudy2.css
+++ b/CSS/casestudy2.css
@@ -731,8 +731,8 @@ footer .link {
         padding: 2% 0% 0 0;
     }
     .graphic-small{
-        padding: 2rem 5rem 2rem 5rem;
+    padding: 0 0 2rem 0;;
     margin: 2rem 0;
-    max-width: 50vw;  
+    max-width: 96vw;
     }
 }
